Added and styled footer

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -39,3 +39,15 @@ span a {
 }
 
 /*MAIN*/
+
+/*FOOTER*/
+.contacts {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  height: 200px;
+}
+
+.copyright {
+padding-left: 20px;
+}
