--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -16,6 +16,8 @@ header {
   height: 69px;
   border-bottom: 1px solid seashell;
   justify-content: space-between;
+  z-index: 1;
+  background-color: black;
 }
 
 .logo {
@@ -39,6 +41,37 @@ span a {
 }
 
 /*MAIN*/
+main{
+  position: relative;
+  top: 69px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+/*MISSION*/
+.mission {
+  height: 700px;
+  width: 1200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-image: url(../images/img-mission-background.jpg);
+  background-position: center;
+}
+
+.text-content {
+  background-color: black;
+  width: 100%;
+  /*display: flex;*/
+  flex-direction: column;
+  text-align: center;
+}
+
+h2,h4 {
+  margin: 15px;
+}
+
 
 /*FOOTER*/
 .contacts {
