--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -68,7 +68,7 @@ main{
   text-align: center;
 }
 
-h2,h4 {
+.text-content h2,h4 {
   margin: 15px;
 }
 
@@ -102,8 +102,46 @@ h3 {
   width: 300px;
 }
 
+/*LOCATIONS*/
+.locations {
+  height: 500px;
+  width: 1200px;
+  background-image: url(../images/img-locations-background.jpg);
+  /*display: flex;
+  direction: column;
+  justify-content: space-around;*/
+}
+
+.locations h2, h4, h3 {
+  text-align: center;
+}
+
+.locations h2 {
+  margin: 15px;
+}
+
+.infos{
+  display: flex;
+  justify-content:space-around;
+  flex-direction: row;
+}
+
+.info {
+  height: 300px;
+  width: 300px;
+  background-color: black;
+  display: flex;
+  flex-direction:column;
+  justify-content: space-around;
+
+}
+
 
 /*FOOTER*/
+footer{
+/*  position: relative;*/
+  margin: 200px;
+}
 .contacts {
   display: flex;
   align-items: center;
