--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -92,7 +92,7 @@ main{
 
 }
 
-h3 {
+.tea.h3 {
   text-align: center;
   margin-top: 10px;
 }
@@ -107,33 +107,45 @@ h3 {
   height: 500px;
   width: 1200px;
   background-image: url(../images/img-locations-background.jpg);
-  /*display: flex;
-  direction: column;
-  justify-content: space-around;*/
+  background-position: 0% 23%;
+}
+
+.locations.text {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .locations h2, h4, h3 {
   text-align: center;
 }
 
+.locations h3 {
+  font-weight: bold;
+}
+.locations h4 {
+  font-weight: normal;
+}
+
 .locations h2 {
-  margin: 15px;
+  margin-bottom: 0px;
 }
 
 .infos{
   display: flex;
-  justify-content:space-around;
+  justify-content: center;
   flex-direction: row;
 }
 
 .info {
+  margin: 15px;
   height: 300px;
   width: 300px;
   background-color: black;
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: space-around;
-
+  opacity: 1;
 }
 
 
