--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,1 +1,34 @@
+/*universal laws*/
+body {
+  font-family: Helvetica;
+  font-size: 22px;
+  color: seashell;
+  background-color: black;
+  opacity: 0.9
+  text-align: center;
+}
 
+
+/* Header*/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid seashell;
+  height: 69px;
+  position: fixed;
+  top: 0;
+  z-index: 1;
+  width: 100%;
+}
+
+.logo img {
+  margin-left: 10px;
+  height: 50px;
+}
+
+header nav span a{
+  margin-left: 25px;
+  margin-right: 25px;
+  color: seashell;
+}
